Bug 232371 - Fetch API: Network process leaks when blobs are unused
Summary: Fetch API: Network process leaks when blobs are unused
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks: 151937 232357
  Show dependency treegraph
 
Reported: 2021-10-27 04:00 PDT by Kimmo Kinnunen
Modified: 2021-10-28 00:32 PDT (History)
7 users (show)

See Also:


Attachments
Demonstrate Network process leak (64.11 MB, application/zip)
2021-10-27 04:01 PDT, Kimmo Kinnunen
no flags Details
Patch (12.88 KB, patch)
2021-10-27 07:10 PDT, youenn fablet
ews-feeder: commit-queue-
Details | Formatted Diff | Diff
Patch (12.57 KB, patch)
2021-10-27 07:16 PDT, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Kimmo Kinnunen 2021-10-27 04:00:12 PDT
Fetch API: Network process leaks when blobs are unused

See the attached test case for creating 10gb leak in network process
Comment 1 Kimmo Kinnunen 2021-10-27 04:01:35 PDT
Created attachment 442577 [details]
Demonstrate Network process leak
Comment 2 Radar WebKit Bug Importer 2021-10-27 04:09:59 PDT
<rdar://problem/84704184>
Comment 3 youenn fablet 2021-10-27 06:29:47 PDT
We are probably not unregistering blobs somewhere.
Comment 4 youenn fablet 2021-10-27 06:31:22 PDT
Hum, in Blob constructor, we have recently added registering the internal URL but I do not see where we are actually unregistering it.
That might be the issue.
Comment 5 youenn fablet 2021-10-27 07:10:42 PDT
Created attachment 442586 [details]
Patch
Comment 6 youenn fablet 2021-10-27 07:16:31 PDT
Created attachment 442587 [details]
Patch
Comment 7 Geoffrey Garen 2021-10-27 11:30:05 PDT
Comment on attachment 442587 [details]
Patch

r=me
Comment 8 EWS 2021-10-28 00:32:38 PDT
Committed r284971 (243621@main): <https://commits.webkit.org/243621@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 442587 [details].