Fetch API: Network process leaks when blobs are unused https://bugs.webkit.org/show_bug.cgi?id=232371 <rdar://problem/84704184>

Reviewed by Geoffrey Garen.

Source/WebCore:

Make sure to unregister the internal URL when the blob gets destroyed.

Test: http/wpt/fetch/blob-gc.html

* fileapi/Blob.cpp:
* fileapi/ThreadableBlobRegistry.h:
* testing/Internals.cpp:
* testing/Internals.h:
* testing/Internals.idl:

Source/WebKit:

Make sure to unregister blobs created by a WebProcess in case WebProcess terminates.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
* NetworkProcess/NetworkConnectionToWebProcess.h:

LayoutTests:

* http/wpt/fetch/blob-gc-expected.txt: Added.
* http/wpt/fetch/blob-gc.html: Added.



Canonical link: https://commits.webkit.org/243621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284971 268f45cc-cd09-0410-ab3c-d52691b4dbfc